--- a/index.html
+++ b/index.html
@@ -6,51 +6,51 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <header class="wrapper description">
+      <img class="description__scheme" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <a class="description__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
+    <main class="wrapper">
+      <section class="add-task">
+        <label class="add-task__label section-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="add-task__input task" type="text">
+          <button class="button-action">Add</button>
         </div>
       </section>
       <section>
-        <h3>Todo</h3>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg">
+        <h3 class="section-label">Todo</h3>
+        <ul id="incomplete-tasks" class="incomplete-list list">
+          <li class="list__item">
+            <input type="checkbox" class="task-checkbox">
+            <label class="task task-name">Pay Bills</label>
+            <input type="text" class="task edit-input">
+            <button class="button-action button-edit">Edit</button>
+            <button class="button-action button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg">
+          <li class="list__item edit-task">
+            <input type="checkbox" class="task-checkbox">
+            <label class="task task-name name-edit">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task edit-input edit-active">
+            <button class="button-action button-edit">Save</button>
+            <button class="button-action button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
       </section>
       <section>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg">
+        <h3 class="section-label">Completed</h3>
+        <ul id="completed-tasks" class="list">
+          <li class="list__item">
+            <input type="checkbox" class="task-checkbox" checked>
+            <label class="task task-name task-name-complete">See the Doctor</label>
+            <input type="text" class="task edit-input">
+            <button class="button-action button-edit">Edit</button>
+            <button class="button-action button-delete">
+              <img class="button-delete__img" src="./remove.svg" alt="">
              </button>
           </li>
         </ul>
