--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="basic">
     <header class="wrapper description">
       <img class="description__scheme" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="description__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
