--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
             <input type="checkbox" class="task-checkbox">
             <label class="task task-name">Pay Bills</label>
             <input type="text" class="task edit-input">
-            <button class="button-action button-edit">Edit</button>
-            <button class="button-action button-delete">
-              <img class="button-delete__img" src="./remove.svg" alt="">
+            <button class="button-action button-action_edit">Edit</button>
+            <button class="button-action button-action_delete">
+              <img class="button-action__img" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="list__item edit-task">
             <input type="checkbox" class="task-checkbox">
             <label class="task task-name name-edit">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task edit-input edit-active">
-            <button class="button-action button-edit">Save</button>
-            <button class="button-action button-delete">
-              <img class="button-delete__img" src="./remove.svg" alt="">
+            <button class="button-action button-action_edit">Save</button>
+            <button class="button-action button-action_delete">
+              <img class="button-action__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -48,9 +48,9 @@
             <input type="checkbox" class="task-checkbox" checked>
             <label class="task task-name task-name-complete">See the Doctor</label>
             <input type="text" class="task edit-input">
-            <button class="button-action button-edit">Edit</button>
-            <button class="button-action button-delete">
-              <img class="button-delete__img" src="./remove.svg" alt="">
+            <button class="button-action button-action_edit">Edit</button>
+            <button class="button-action button-action_delete">
+              <img class="button-action__img" src="./remove.svg" alt="">
              </button>
           </li>
         </ul>
