--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="basic">
     <header class="wrapper description">
       <img class="description__scheme" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="description__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
@@ -25,18 +25,18 @@
             <input type="checkbox" class="task-checkbox">
             <label class="task task-name">Pay Bills</label>
             <input type="text" class="task edit-input">
-            <button class="button-action button-edit">Edit</button>
-            <button class="button-action button-delete">
-              <img class="button-delete__img" src="./remove.svg" alt="">
+            <button class="button-action button-action_edit">Edit</button>
+            <button class="button-action button-action_delete">
+              <img class="button-action__img" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="list__item edit-task">
             <input type="checkbox" class="task-checkbox">
             <label class="task task-name name-edit">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task edit-input edit-active">
-            <button class="button-action button-edit">Save</button>
-            <button class="button-action button-delete">
-              <img class="button-delete__img" src="./remove.svg" alt="">
+            <button class="button-action button-action_edit">Save</button>
+            <button class="button-action button-action_delete">
+              <img class="button-action__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -46,11 +46,11 @@
         <ul id="completed-tasks" class="list">
           <li class="list__item">
             <input type="checkbox" class="task-checkbox" checked>
-            <label class="task task-name task-name-complete">See the Doctor</label>
+            <label class="task task-name task-name_complete">See the Doctor</label>
             <input type="text" class="task edit-input">
-            <button class="button-action button-edit">Edit</button>
-            <button class="button-action button-delete">
-              <img class="button-delete__img" src="./remove.svg" alt="">
+            <button class="button-action button-action_edit">Edit</button>
+            <button class="button-action button-action_delete">
+              <img class="button-action__img" src="./remove.svg" alt="">
              </button>
           </li>
         </ul>
